# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  SearchEngine.cc
Cache/: CMakeLists.txt  CacheManager.cpp  CacheManager.h  LRUCache.cpp  LRUCache.h  RedisServer.h
Common/: CMakeLists.txt
Common/include/: CommonTool.h  Configuration.h  DirScanner.h  NonCopyable.h  SplitTool.h  SplitToolCppJieba.h  WebPage.h
Common/src/: CommonTool.cpp  Configuration.cpp  SplitToolCppJieba.cpp  WebPage.cpp
LRULog/: CMakeLists.txt  CacheManager.cpp  CacheManager.h  LRUCache.cpp  LRUCache.h
OfflineKeyRecommend/: CMakeLists.txt  DictProducer.cpp  DictProducer.h
OfflineWebSearch/: CMakeLists.txt  PageLib.cpp  PageLibPreprocessor.cpp  PageLibPreprocessor.h
OnlineBase/: Acceptor.cpp  CMakeLists.txt  Epoll.cpp  Epoll.h  EventFd.cpp  EventFd.h  EventLoop.cpp  EventLoop.h  HttpTask.h  ProtocolParser.cpp  ProtocolParser.h  SocketIO.cpp  SocketIO.h  TcpConnection.cpp
OnlineKeyRecommend/: CMakeLists.txt  CandidateResult.h  Dictionary.cpp  Dictionary.h  KeyRecommandTask.h  KeyRecommander.cpp  KeyRecommander.h
OnlineWebSearch/: CMakeLists.txt  WebPageQuery.cpp  WebPageQuery.h  WebPageSearchTask.h  WebPageSearcher.cpp  WebPageSearcher.h
Other/include/: CacheManager.h  KeyRecommander.h  ProtocolParser.h  Thread.h  Threadpool.h  TimerManager.h  WebPageQuery.h  WebPageResearcher.h  WebPageSearcher.h  priority_queue.h
Other/src/: CandidateResult.cpp  Dictionary.cpp  KeyRecommander.cpp  LRUCache.cpp  MyTask.cpp  ProtocolParser.cpp  RedisServer.cpp  SearchEngineServer.cpp  WebPageSearcher.cpp
RedisLog/: CMakeLists.txt  RedisServer.cpp  RedisServer.h
SearchEngineServer/: Acceptor.h  CMakeLists.txt  Epoll.h  EventLoop.cpp  EventLoop.h  HttpStruct.h  HttpTask.h  InetAddress.h  ProtocolParser.cpp  ProtocolParser.h  SearchEngineServer.cpp  SearchEngineServer.h  Socket.h  SocketIO.cpp  SocketIO.h  Task.h  TaskQueue.cpp  TaskQueue.h  TcpConnection.cpp  TcpConnection.h  TcpServer.h  ThreadPool.cpp  ThreadPool.h
Timer/: CMakeLists.txt  TimerFd.cpp  TimerFd.h  TimerManager.cpp  TimerManager.h  TimerTask.h
asset/: ab.json
conf/: config.json  config.template
front/: client.js  index.html
include/: CandidateResult.h  Configuration.h  DictProducer.h  Dictionary.h  DirScanner.h  FileProcessor.h  LRUCache.h  MyTask.h  Noncopyable.h  PageLib.h  PageLibPreprocessor.h  RedisServer.h  SearchEngineServer.h  SplitTool.h  SplitToolCppJieba.h  TcpServer.h  TimerTask.h  WebPage.h
include/simhash/: Simhasher.hpp
src/: CacheManager.cpp  Configuration.cpp  DictProducer.cpp  DirScanner.cpp  FileProcessor.cpp  PageLib.cpp  PageLibPreprocessor.cpp  SplitToolCppJieba.cpp  TcpServer.cpp  Thread.cpp  Threadpool.cpp  TimerManager.cpp  TimerTask.cpp  WebPage.cpp  WebPageQuery.cpp  WebPageResearcher.cpp  priority_queue.cpp
test/: CMakeLists.txt  testConfiguration.cpp  testCppjieba.cpp  testDictProducer.cpp  testDirScanner.cpp  testPageLib.cpp  testPageLibPreprocessor.cpp  testSimhash.cpp  testSplitToolCppJieba.cpp  testWebPage.cpp
test/Common/: testCommonTool.cpp  testConfiguration.cpp  testDirScanner.cpp  testSplitToolCppJieba.cpp
test/LRULog/: testLRULog.cpp
test/OfflineKeyRecommend/: testDictProducer.cpp
test/OfflineWebSearch/: testPageLib.cpp  testPageLibPreprocessor.cpp
test/OnlineKeyRecommend/: testDictionary.cpp  testKeyRecommander.cpp
test/OnlineWebSearch/: testWebPageQuery.cpp
test/RedisLog/: testRedisServer.cpp
test/SearchEngineServer/: testProtocolParser.cpp  testSearchEngineServer.cpp
test/Timer/: testTimerFd.cpp
